[gd_scene load_steps=5 format=3 uid="uid://csm1kajj2v5k2"]

[ext_resource type="Script" path="res://Scripts/Settings.gd" id="1_3jb2u"]
[ext_resource type="FontFile" uid="uid://dtreqxrld72uy" path="res://Graphics/High Speed.ttf" id="2_lk6jw"]
[ext_resource type="Theme" uid="uid://wxkyex6dmq8d" path="res://UI Elements/CloseBotton.tres" id="3_57u6d"]
[ext_resource type="FontFile" uid="uid://7ma3rbau25hp" path="res://UI Elements/High Speed.ttf" id="4_by6nb"]

[node name="Settings" type="Node2D"]
script = ExtResource("1_3jb2u")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 0.854902)
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
offset_left = 50.0
offset_top = 26.0
offset_right = 684.0
offset_bottom = 86.0
theme_override_fonts/font = ExtResource("2_lk6jw")
theme_override_font_sizes/font_size = 40
text = "Settings"

[node name="Close" type="Button" parent="Label" groups=["Buttons"]]
custom_minimum_size = Vector2(30, 30)
layout_mode = 0
offset_left = 1061.0
offset_top = -16.0
offset_right = 1092.0
offset_bottom = 15.0
size_flags_horizontal = 10
mouse_force_pass_scroll_events = false
theme = ExtResource("3_57u6d")
theme_override_fonts/font = ExtResource("4_by6nb")
icon_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 342.0
offset_right = 996.0
offset_bottom = 438.0
theme_override_constants/margin_top = 150

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lk6jw")
theme_override_font_sizes/font_size = 30
item_count = 5
selected = 2
popup/item_0/text = "3840x2160"
popup/item_0/id = 2160
popup/item_1/text = "2560x1440"
popup/item_1/id = 1440
popup/item_2/text = "1920x1080"
popup/item_2/id = 1080
popup/item_3/text = "1600x900"
popup/item_3/id = 900
popup/item_4/text = "1280x720"
popup/item_4/id = 720

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/OptionButton"]
layout_mode = 2
offset_left = -289.0
offset_top = 7.0
offset_right = -32.0
offset_bottom = 52.0
theme_override_fonts/font = ExtResource("2_lk6jw")
theme_override_font_sizes/font_size = 30
text = "Resolution"

[node name="OptionButton2" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lk6jw")
theme_override_font_sizes/font_size = 30
item_count = 4
selected = 0
popup/item_0/text = "Fullscreen"
popup/item_0/id = 0
popup/item_1/text = "Window Mode"
popup/item_1/id = 1
popup/item_2/text = "Borderless Window"
popup/item_2/id = 2
popup/item_3/text = "Borderless Fullscreen"
popup/item_3/id = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/OptionButton2"]
layout_mode = 2
offset_left = -289.0
offset_top = 7.0
offset_right = -32.0
offset_bottom = 52.0
theme_override_fonts/font = ExtResource("2_lk6jw")
theme_override_font_sizes/font_size = 30
text = "Mode"

[node name="VolumeMusic" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VolumeMusic"]
layout_mode = 0
offset_left = -288.0
offset_top = -14.0
offset_right = -31.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("2_lk6jw")
theme_override_font_sizes/font_size = 30
text = "Music"

[node name="VolumeEffekts" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VolumeEffekts"]
layout_mode = 0
offset_left = -288.0
offset_top = -14.0
offset_right = -31.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("2_lk6jw")
theme_override_font_sizes/font_size = 30
text = "SFX"

[connection signal="pressed" from="Label/Close" to="." method="_on_close_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/OptionButton2" to="." method="_on_option_button_2_item_selected"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/VolumeMusic" to="." method="_on_volume_music_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/VolumeEffekts" to="." method="_on_volume_effekts_value_changed"]
